Regression test: store results in separate thread and improved performance
Converted from F2 updates to F
Isolated sources of randomness
Send messages in matching game
Send messages for audio check box
Send different messages for representations in equality lab
Send messages when number line knobs are dragged
Send messages when the lock is toggled
Send messages when the scaled up value changes
Send messages when the container state changes
Added messages for changing representations
Added messages for dragging slices
Added messages for numerator and denominator spinners
Added messages for max spinner
Added sim sharing event messages
Make public properties private in SpinnerButtonNode, to confirm that they don't need to be exposed (and some of them don't really need to be properties)
Refactored RadioButtonStrip for use in fluid pressure and flow
# 0.00.58 (62682) Mar 20, 2012
Equality Lab: Fixed: If in number line when pressing "reset all", it creates 6 instead of 4 containers on each side
# 0.00.57 (62599) Mar 19, 2012
Intro: Added different colors for horizontal bars, vertical bars and orange glasses
# 0.00.56 (62498) Mar 12, 2012
Intro & Equality Lab: Fixed: Out of memory exception when adding/subtracting lots of 3d cake slices
# 0.00.55 (62473) Mar 12, 2012
Equality Lab: Made the green arrow draggable
Matching Game: Limit values to <= 2.0 since otherwise it would go off the chart for the number line
# 0.00.54 (62462) Mar 12, 2012
Matching Game: Fixed: 2x2 and 3x3 grid don't show the right value
# 0.00.53 (62448) Mar 12, 2012
Equality Lab: Added left/right spinners
Matching Game: Removed values for denominator > 10
Matching Game: Scale representations to a width of 110 so it will be a good fit for the starting cells and score cells
Equality Lab: Put the fraction that is on the bucket on the left hand side, to help students visually parse.
Intro: Moved the vertical bars down to center them between icon bar and top of fraction
# 0.00.52 (62396) Mar 10, 2012